# RepoScope

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
repointel/: __main__.py
reposcope/: __init__.py  answer.py  api.py  chunker.py  cli.py  embedder.py  indexer.py  models.py  retrieval.py  scanner.py  vector_store.py
tests/: test_chunker.py  test_cli.py  test_retrieval.py
