[project]
name = "repointel"
version = "0.1.0"
description = "Local-first codebase-aware AI: index any repo and ask questions about it."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Nirakar Jena", email = "jenashubham60@gmail.com"}]
keywords = ["codebase", "rag", "ai", "search", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
api    = ["fastapi>=0.115", "uvicorn>=0.30"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=0.6"]
claude = ["anthropic>=0.40"]
embed  = ["sentence-transformers>=3.0", "numpy>=1.26"]
all    = ["fastapi>=0.115", "uvicorn>=0.30", "openai>=1.0", "google-genai>=0.6", "anthropic>=0.40", "sentence-transformers>=3.0", "numpy>=1.26"]
dev    = ["pytest>=8.0"]

[project.scripts]
repointel = "reposcope.cli:main"

[project.urls]
Repository = "https://github.com/nirakar24/reposcope"
"Bug Tracker" = "https://github.com/nirakar24/reposcope/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
